<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ladder_main_background"
    android:orientation="vertical"
    android:paddingTop="45dp" >

    <ListView
        android:id="@+id/lv_device_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lv_device_info_background"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@drawable/device_info_divider"
        android:listSelector="@android:color/transparent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:paddingLeft="90dp"
        android:paddingRight="30dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_click" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/star_key"
            android:textColor="@color/blue_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_back" />
    </LinearLayout>

</RelativeLayout>