<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ladder_main_background" >

    <TextView
        android:id="@+id/tv_hint_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textSize="@dimen/middle_big_text_size" />

    <EditText
        android:id="@+id/et_input_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_hint_content"
        android:layout_centerHorizontal="true"
        android:paddingLeft="25dp"
        android:textSize="@dimen/text_input_number_size"
        android:singleLine="true"
        android:password="true"
        android:textColor="#14578B"
        android:inputType="number"
        android:background="@drawable/room_num_input_bg">
    </EditText>

    <LinearLayout
        android:id="@+id/layout_affirm_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_input_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/affirm_click"
            android:textSize="20sp"
            android:textColor="@color/wathet_blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/well_key"
            android:paddingLeft="15dp"
            android:textColor="@color/blue_black" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_affirm_hint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_back_click"
            android:textSize="20sp"
            android:textColor="@color/wathet_blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/star_key"
            android:paddingLeft="15dp"
            android:textColor="@color/blue_black" />
    </LinearLayout>

</RelativeLayout>